<resources>
    <string name="app_name">Unilot</string>
    <string name="unilot_app">Unilot® App</string>
    <string name="version" formatted="false">Version: %s Closed Beta</string>
    <string name="grant_type">client_credentials</string>
    <string name="faq_url">https://api.unilot.io/en/mobile/faq</string>
    <string name="wp_url">https://unilot.io/en-us/wp.html</string>
    <string name="unilot_url">https://unilot.io/en-us/</string>
    <string name="ok">OK</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly_bonus">Bonus</string>
    <string name="token">Token</string>
    <string name="profile">Profile</string>
    <string name="daily_lottery">Daily drawing</string>
    <string name="prize_fund">Jackpot</string>
    <string name="till_the_end_of_registration">Left till the end of drawing:</string>
    <string name="weekly_lottery">Weekly drawing</string>
    <string name="bonus_draw">Bonus drawing</string>
    <string name="unit_draw">Unit drawing</string>
    <string name="days">Days</string>
    <string name="mutable_days">Days</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="sec">Seconds</string>
    <string name="games_history">History of drawings</string>
    <string name="statistic">Statistics</string>
    <string name="how_it_works">How it works?</string>
    <string name="faq">FAQ</string>
    <string name="white_paper">White Paper</string>
    <string name="settings">Settings</string>
    <string name="be_aware">Stay tuned:</string>
    <string name="blockchain_based_lottery">Blockchain-based lottery</string>
    <string name="english">English</string>
    <string name="russian">Русский</string>
    <string name="deutsch">Deutsch</string>
    <string name="no_games_for_today">There is no drawing for today yet</string>
    <string name="no_weekly_games">There is no weekly drawing yet</string>
    <string name="no_bonus_games">There is no bonus drawing yet</string>
    <string name="no_token_games">There is no token drawing yet</string>
    <string name="eth">Eth</string>
    <string name="participate">Participate</string>
    <string name="top_places">Top places</string>
    <string name="winner_announcement">Left till winners\n announcement:</string>
    <string name="you_are_not_in_participants_list">You are not yet in the list of participants.</string>
    <string name="how_to_participate">How to participate?</string>
    <string name="notify_about">Notify about</string>
    <string name="about_daily_lottery">Daily drawing</string>
    <string name="about_weekly_lottery">Weekly drawing</string>
    <string name="about_bonus_draw">Bonus drawing</string>
    <string name="about_token_draw">Unit drawing</string>
    <string name="language_selection">Select language:</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="wallet_number">Wallet address</string>
    <string name="scan_qr_code">Scan QR-code</string>
    <string name="add_wallet">Add wallet</string>
    <string name="close">Close</string>
    <string name="total_prize_fund">Total jackpot</string>
    <string name="daily_lottery_unilot">Daily drawing</string>
    <string name="weekly_lottery_unilot">Weekly drawing</string>
    <string name="lottery_ends_in">The drawing finishes in:</string>
    <string name="copy_number">Copy address</string>
    <string name="wallet_number_has_been_copied">Wallet address has been copied</string>
    <string name="your_wallets">Your wallets</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="delete_confirmation">Are you sure you want to delete this wallet?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="congratulations">Сongratulations!</string>
    <string name="you_won">You won!</string>
    <string name="you_take_place_d">You took %d place\nand won:</string>
    <string name="game_history">History of drawing</string>
    <string name="system_selecting_winner">The system\nis choosing winners</string>
    <string name="copy_transaction_number">Copy transaction id</string>
    <string name="results_of_daily_drawing">Results of Daily drawing</string>
    <string name="results_of_weekly_drawing">Results of Weekly drawing</string>
    <string name="results_of_monthly_drawing">Results of Bonus drawing</string>
    <string name="unfortunately_you_are_lose">Unfortunately, you lose.</string>
    <string name="you_automatically_participate_in_bonus_drawing_that_will_run_in">You automatically become a participant of the Bonus drawing that is to take place in:</string>
    <string name="how_does_it_work">How it works:</string>
    <string name="how_does_it_work_text">1. Select the type: Daily, Weekly\n2. Pay the ticket cost\n3. Wait for the result\n\nThe system is choosing the winners who split the jackpot randomly.\n\nDuring the drawings you can always check the number of prize-winning places and the jackpot amount in the relevant section: Daily, Weekly, Bonus. Lists are constantly changing depending on the number of participants.\n\nAll the users who lost in Daily and Weekly drawings will automatically become participants of the Bonus Monthly Draw for free.</string>
    <string name="wallet_not_found">Since you have not registered your wallet, your status is unknown.\nCheck History of the drawing.</string>
    <string name="drawing_from">Drawing dated:</string>
    <string name="jackpot">JACKPOT</string>
    <string name="participants">PARTICIPANTS</string>
    <string name="winners">WINNERS</string>
    <string name="place">Place</string>
    <string name="wallet">Wallet</string>
    <string name="drawing_history">History\nof drawings</string>
    <string name="type_date">Type and Date</string>
    <string name="status">Status</string>
    <string name="prize">Prize</string>
    <string name="in_progress">In progress</string>
    <string name="move">Go to</string>
    <string name="details">Details</string>
    <string name="finished">Finished</string>
    <string name="outdated">Your version of Unilot is out of date. Please update it.</string>
    <string name="goto_googleplay">Go to Google Play</string>
    <string name="all">All</string>
    <string name="tutorial_step_1">First choose the type of the drawings: Daily or Weekly. Then tap the button “Participate” to start.</string>
    <string name="tutorial_step_2">Be aware to use only private crypto wallets. If you use an exchange wallet to participate you will get neither bonus tokens nor winnings.</string>
    <string name="tutorial_step_3">Here is the wallet address you need to transfer the specified amount to. Please copy it.</string>
    <string name="tutorial_step_4">To participate please send ETH from your crypto wallet to Unilot address.</string>
    <string name="tutorial_step_5">Go to your wallet and transfer the necessary amount to the copied wallet address.</string>
    <string name="tutorial_step_6">Return to the app, go to Profile and add your wallet address. Now you can get notifications about win or loss.</string>
    <string name="tutorial_step_7">Wait for the results. If you lose in Daily or Weekly drawing, you will automatically become a participant of the Bonus Monthly Draw for free.</string>
    <string name="skip">Skip</string>
    <string name="want_know_more">Want to know more</string>
    <string name="letsgo">Lets GO!</string>
    <string name="wallets_attention">Before participating, please specify the address of you wallet which will be used to make payment</string>
    <string name="attention">Attention!</string>
    <string name="invalid_wallet_number">Invalid wallet number</string>
    <string name="payment_attention">Make sure that you transfer ETH from the wallet that is registered in the profile.</string>
    <string name="participation_rules" formatted="false">
        <![CDATA[
            <b>Contribution process:</b><br>
            1. Copy the Unilot wallet address down below.<br>
            2. Go to your private wallet application<br>
            3. Send <b>%f</b> Eth to copied address with<br>
            <b>Gas Limit - %d,</b><br>
            <b>Gas Price - %d Gwei</b>
        ]]>
    </string>
    <string name="list_of_participants">List of participants</string>
    <string name="participation_rules_bonus">To participate in Bonus drawing, you should be a participant of Daily or Weekly drawings.</string>
    <string name="participation_rules_unit">To participate in 100 000 UNIT raffle you should be a participant of Daily or Weekly drawings.</string>
    <string name="title_wallets_allert">Please specify address of the wallet that will be used to buy UNIT tokens.</string>
    <string name="text_wallets_allert">
        Please note!\n
        What application we RECOMMEND:\n\n
        • MyEtherWallet (http://myetherwallet.com/)\n
        • Metamask browser extension (https://metamask.io/)\n\n
        Do NOT use this wallet applications for investment:\n\n
        • Freewallet apps (https://freewallet.org/)\n
        • Any wallet that is stored on exchange (coinbase, bitfinex, coinexchange, cex.io and etc)\n
        • Any wallet application that doesn’t allow you to export and import your wallet freely without any extra condition (like write to support)
    </string>
    <string name="your_wallet_number">Wallet number</string>
    <string name="send_feedback">Send feedback</string>
    <string name="send_feedback_email">mvp@unilot.io</string>
    <string name="send_feedback_subject">Unilot app beta testing</string>
    <string name="send_feedback_message">
        Send Feedback\n
        Have a suggestion for improvement or find a bug? Please send your feedback to help us improve Unilot product!
    </string>

</resources>
