<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff2d8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/title_wallets_allert"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            app:fontFamily="@font/roboto_medium" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:text="@string/text_wallets_allert"
            android:textColor="@color/colorBrown"
            android:textSize="14sp"
            app:fontFamily="@font/roboto" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/okBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/view_square_rounded_background_black"
            android:paddingBottom="8dp"
            android:paddingEnd="32dp"
            android:paddingStart="32dp"
            android:paddingTop="8dp"
            android:text="@string/ok"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />

    </LinearLayout>

</ScrollView>