<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/view_dark_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingStart="24dp"
        android:paddingTop="64dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="36dp">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:fontFamily="monospace"
                android:text="@string/app_name"
                android:textColor="@color/colorYellow"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_star" />

        </android.support.constraint.ConstraintLayout>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:fontFamily="@font/roboto_light"
            android:text="@string/blockchain_based_lottery"
            android:textColor="@color/colorLightGray"
            android:textSize="12sp" />

        <View
            android:layout_width="128dp"
            android:layout_height="0.5dp"
            android:layout_marginBottom="18dp"
            android:layout_marginTop="18dp"
            android:background="@color/colorDarkGray" />

        <LinearLayout
            android:id="@+id/historyBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="4dp"
            android:paddingTop="4dp">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:srcCompat="@drawable/ic_history" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="18dp"
                android:layout_marginStart="18dp"
                app:fontFamily="@font/roboto_light"
                android:text="@string/game_history"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/statisticBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:paddingBottom="4dp"
            android:paddingTop="4dp">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:srcCompat="@drawable/ic_statistic" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="18dp"
                android:layout_marginStart="18dp"
                app:fontFamily="@font/roboto_light"
                android:text="@string/statistic"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/infoBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:paddingBottom="4dp"
            android:paddingTop="4dp">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:srcCompat="@drawable/ic_info" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="18dp"
                android:layout_marginStart="18dp"
                app:fontFamily="@font/roboto_light"
                android:text="@string/how_it_works"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/whitepaperBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:paddingBottom="4dp"
            android:paddingTop="4dp">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:srcCompat="@drawable/ic_whitepaper" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="18dp"
                android:layout_marginStart="18dp"
                app:fontFamily="@font/roboto_light"
                android:text="@string/white_paper"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="128dp"
            android:layout_height="0.5dp"
            android:layout_marginBottom="18dp"
            android:layout_marginTop="18dp"
            android:background="@color/colorDarkGray" />

        <LinearLayout
            android:id="@+id/settingsBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="4dp"
            android:paddingTop="4dp">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:srcCompat="@drawable/ic_settings" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="18dp"
                android:layout_marginStart="18dp"
                app:fontFamily="@font/roboto_light"
                android:text="@string/settings"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="128dp"
            android:layout_height="0.5dp"
            android:layout_marginBottom="18dp"
            android:layout_marginTop="18dp"
            android:background="@color/colorDarkGray" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            app:fontFamily="@font/roboto_light"
            android:text="@string/be_aware"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />

    </LinearLayout>

</ScrollView>
