<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:text="@string/your_wallets"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        app:fontFamily="@font/roboto_medium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/view_rounded_background_semi_black"
        android:orientation="vertical"
        android:padding="16dp">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_wallet"
            android:textColor="@color/colorOrange"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/wallet_number"
            android:textColor="@color/colorOrange"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/walletEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/colorWhite"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:textCursorDrawable="@null"
                    android:background="@android:color/transparent"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/colorLightGray"/>
            </LinearLayout>

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/scanBtn"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="bottom"
                android:background="@android:color/transparent"
                android:padding="4dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_qr_code" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/addWalletBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textColor="@color/colorOrange"
                android:textSize="18sp"
                app:fontFamily="@font/roboto_light" />

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="8dp"
                android:padding="2dp"
                app:srcCompat="@drawable/ic_add" />
        </LinearLayout>

    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:scrollbars="horizontal"
        tools:listitem="@layout/view_holder_wallets" />

</LinearLayout>